# JSSCanner

./: README.md  git.ignore
JSScanner/: CMakeLists.txt  GlobalVars.cpp  JSScanner.cpp  JSScanner.filters  JSScanner.h  JSScanner.sln  JSScanner.vcxproj  JSScanner.vcxproj.filters  JSScanner_Run  Makefile  _Test.sh  cmake_install.cmake  main.cpp  pch.h  stl_intrinsics_stub.cpp
JSScanner/builtin/: BuiltinObject.cpp  BuiltinObject.h
JSScanner/builtin/helpers/: Base64Utils.cpp  Base64Utils.h  JSValueConverter.cpp  JSValueConverter.h  MockHelpers.cpp  MockHelpers.h  SensitiveKeywordDetector.cpp  SensitiveKeywordDetector.h  UrlComparator.cpp  UrlComparator.h
JSScanner/builtin/objects/: ActiveXObject.cpp  ActiveXObject.h  ArrayObject.cpp  ArrayObject.h  BlobObject.cpp  BlobObject.h  CharacterDataObject.cpp  CharacterDataObject.h  ConsoleObject.cpp  ConsoleObject.h  CryptoSubtleObject.cpp  CryptoSubtleObject.h  DocumentObject.cpp  DocumentObject.h  ElementObject.cpp  ElementObject.h  FormDataObject.cpp  FormDataObject.h  GlobalObject.cpp  GlobalObject.h  IndexedDBObject.cpp  IndexedDBObject.h  JQueryObject.cpp  JQueryObject.h  LocalStorageObject.cpp  LocalStorageObject.h  LowPriorityAPIs.cpp  LowPriorityAPIs.h  MathObject.cpp  MathObject.h  MediumPriorityAPIs.cpp  MediumPriorityAPIs.h  NavigatorObject.cpp  NavigatorObject.h  ProxyFallbackObject.cpp  ProxyFallbackObject.h  RegExpObject.cpp  RegExpObject.h  StringObject.cpp  StringObject.h  (+12 more)
JSScanner/chain/: AttackChain.cpp  AttackChain.h  ChainDetector.cpp  ChainDetector.h  ChainStep.cpp  ChainStep.h
JSScanner/core/: BrowserConfig.cpp  BrowserConfig.h  ChainTrackerManager.cpp  ChainTrackerManager.h  DynamicAnalyzer.cpp  DynamicAnalyzer.h  DynamicStringTracker.cpp  DynamicStringTracker.h  JSAnalyzer.cpp  JSAnalyzer.h  ScopedJSRuntime.h  StringDeobfuscator.cpp  StringDeobfuscator.h  TaintTracker.cpp  TaintTracker.h  TaintedValue.cpp  TaintedValue.h  VariableScanner.cpp  VariableScanner.h
JSScanner/docs/: ARCHITECTURE_DIAGRAMS.md  COMPLETION_REPORT.md  COMPREHENSIVE_PROJECT_REPORT.md  DEBUG_LOG_CONTROL.md  DETECTION_PROCESS_DIAGRAMS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MODULE_DEPENDENCY_AND_MALWARE_DETECTION_FLOW.md  MODULE_DEPENDENCY_DIAGRAMS.md  PROJECT_SUMMARY.md  README.md  project.md
JSScanner/hooks/: Hook.h  HookEvent.cpp  HookEvent.h  HookType.h
JSScanner/model/: Detection.cpp  Detection.h  JsValueVariant.cpp  JsValueVariant.h
JSScanner/node/: DataNode.cpp  DataNode.h
JSScanner/parser/css/: BackgroundImageParser.cpp  BackgroundImageParser.h
JSScanner/parser/html/: TagParser.cpp  TagParser.h
JSScanner/parser/js/: UrlCollector.cpp  UrlCollector.h
JSScanner/reporters/: AnalysisResponse.cpp  AnalysisResponse.h  HtmlJsReportWriter.cpp  HtmlJsReportWriter.h  REFACTORING_REPORT.md  ResponseGenerator.cpp  ResponseGenerator.h
JSScanner/reporters/builders/: DetectionBuilder.cpp  DetectionBuilder.h  EventProcessor.cpp  EventProcessor.h  SummaryGenerator.cpp  SummaryGenerator.h
JSScanner/reporters/constants/: AnalysisConstants.h
JSScanner/reporters/filters/: EventFilter.cpp  EventFilter.h
JSScanner/reporters/metadata/: RouteHint.cpp  RouteHint.h  Timing.cpp  Timing.h  Version.cpp  Version.h
JSScanner/reporters/processors/: CryptoChainProcessor.cpp  CryptoChainProcessor.h
JSScanner/test/: ObfuscatorTest.cpp
JSScanner/test_file/: jQuey.html  john.html  mola.html  test_1000_calls_fetch.js  test_100_taints_fetch.js
JSScanner/test_file/proxy/: test_proxy_fallback.js  test_simple_addEventListener.js
